# MusicPlayer

./: README.md
server/src/: CMakeLists.txt  main.cxx
server/src/account/: CMakeLists.txt  account.cxx  account.h
server/src/bld/: CMakeCache.txt  Main  Makefile  cmake_install.cmake
server/src/bld/account/: Makefile  cmake_install.cmake
server/src/bld/database/: Makefile  cmake_install.cmake
server/src/bld/multi_thread/: Makefile  cmake_install.cmake
server/src/bld/multi_thread/thread_pool/: Makefile  cmake_install.cmake
server/src/bld/multi_thread/thread_safe_queue/: Makefile  cmake_install.cmake
server/src/bld/network/: Makefile  cmake_install.cmake
server/src/bld/network/boot/: Makefile  cmake_install.cmake
server/src/bld/network/connect/: Makefile  cmake_install.cmake
server/src/database/: CMakeLists.txt  database.cxx  database.h  database.tcc
server/src/multi_thread/: CMakeLists.txt  test_threads.cxx
server/src/multi_thread/thread_pool/: thread_pool.h  thread_pool.tcc
server/src/multi_thread/thread_safe_queue/: thread_safe_queue.h  thread_safe_queue.tcc
server/src/network/: CMakeLists.txt
server/src/network/boot/: CMakeLists.txt  main.cxx  network.cxx  network.h  test_network.cxx
server/src/network/connect/: CMakeLists.txt  connect.cxx  connect.h
test/: thread_pool.h
test/func/: main.cxx
test/have_fun/: main.cxx
test/multi_thread/: main.cxx  thread_pool.h  thread_safe_queue.h
test/multi_thread/test/: main.cxx
test/play/: main.cxx  move_only_function.h
test/test/: main.cxx
test/test_tsq/: main.cxx  thread_safe_queue.h
(+4 files in other folders)
